--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 15vmin;
 }
 
 .App-header {
@@ -14,12 +14,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(5px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-form {
+  text-align: center;
+  width: 30%;
+  padding: 8px;
 }
 
 @keyframes App-logo-spin {
@@ -29,4 +35,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+table {
+  border-collapse: collapse;
+  width: 50%;
+}
+
+th, td {
+  border: 1px solid white;
+  padding: 6px;
+  text-align: center;
 }
